@@ -2,6 +2,5 @@ AUX lash-0.6.0_rc2-texi2html.diff 2054 SHA256 40d76da366d8f82f3ff060d896fd3a682f
 AUX lash-original-0.6.0_rc2-include.patch 504 SHA256 354c25e62bb491320836965f5d31691a688d95eaa3b30af5c834f606def603e4 SHA512 47f181484c7d17fe4a7b78dd50eecab0e6c9d9b5a3d65324e744d8afe3695679e0da559e349d2e741fa7c4a97d97322a45b16a345286176c7218fce804c9e0e6 WHIRLPOOL 46a204b4f118feb33f22729ac07a8cbbf45192e05f5b62a8ea21f6214af1d2c3a035b59d06ae0664a9742d4cd536086f3fac1f4b88f8542f8d8708fb4bfcea10
 DIST lash-0.6.0~rc2.tar.bz2 431891 SHA256 3c1eb2bd88e1a0722dea5c24be4ede1d80848c963d41751973fae73c47dfe18b SHA512 704e24ccadccb469e820be5fb58dd4d953a8fc2903cd857a290267a87dda596639ec381d5cb7cdfcd715df7d98d6570e52731bddd17f8a3425edd8b699632401 WHIRLPOOL b6de62365af169e61a0d93a73366dca7d2be4aa759ddc3da16d02c0a0aba05c549e237a73b0ec3b7ac8ed258cf846d6cd699940cf73127cdec404107371523a3
 EBUILD lash-original-0.6.0_rc2-r1.ebuild 2138 SHA256 ffe54985f18fe6412f3f160086845ffb3cf743baf67e6c4c8ad1c388f8d4cd70 SHA512 1846fd7a93721a1073af0c4da087fa07e034e652a63c95d9e86cdf7ed5d11db31c8f28f9d7958528e5cbe69f1bce53d6a25923b05679f6af7c8e3a8509f686a2 WHIRLPOOL a27367d4309a45e9e73467e0ee785c05e53dba09b6e1ea43c3722c8348b44620f48694a3640a42736c359adac701a375b480ce26a1f5ce6426ed7e6c7f978066
-EBUILD lash-original-0.6.0_rc2.ebuild 2255 SHA256 d46c262f5f0255becdc590d95d32d57881821149505a5659148220656c6836ef SHA512 61c30468254ee9f7709a38a63288f5fd1c0b8fb114c10da373ac14ddb60013cbd445662597fd1976af1d97d732f8d8ec4bd66a620b95d78fcb681ca0cf3d95cb WHIRLPOOL c8ad87861d4409744cbe7dddaad8f74f8c6ce49ea6c8584de800350d69c56de41c3eac00184b3347c47038b18625ef1fd095a442c3ef4e1787e3b67e48ca7abe
-MISC ChangeLog 1961 SHA256 d3807e19bf44d6f95be1e144bd7bf444adadd3a7b583e8e753cc756dc7f7e96e SHA512 1f8816eb9f177a20a0e4eaeb8fc0b3b580cbd4ac44df559875414d6fd4b7aff55bbec84a0fb91da8e318ef1254c7a44425e5668a28f5ac68d083b7aba881e1f4 WHIRLPOOL 028b85688fcfbd38e78440dcb527c837a7796753ff65c10523eccac6ef587fa0a6290411a522543e89b767429344600094f38b9c612caa355040ec4d5b7396d2
+MISC ChangeLog 2107 SHA256 21a08a7c3e15c10744f33b6ae0495efe040cfaa90b925ff228919f1e6f4c97a0 SHA512 c67f839c3383087f7e9b3df2efae99b5408d9056dde3381573ac24523d1fadce41ec93fcdb64332d1be6c055490c9d3c0919cd807a8f7ef5fb3810eae232a758 WHIRLPOOL f7bfd6b515ab86738690d47c69fd9b6d2a3ed7ced67b2680f70047d887c0848131723c0297c10b82ee56faf785ab9d33e49c77b9c7a4f37ca6ed3358160991a1
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
